# ARIA

./: .env.example  .gitignore  ARIA_PRD_v1.md  README.md  design.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/connectors/: __init__.py  base.py  calendar.py  github.py  gmail.py
backend/app/core/: config.py  deps.py  metrics.py  supabase_client.py
backend/app/middleware/: metrics.py  security.py
backend/app/migrations/: 0004_external_id_connector_state.sql
backend/app/providers/: base.py  deepseek.py  qwen.py
backend/app/routes/: briefing.py  chat.py  connectors.py  documents.py  events.py  health.py  ingest.py  reminders.py
backend/app/schemas/: briefing.py  chat.py  classifier.py  ingest.py
backend/app/services/: briefing_service.py  calendar_import.py  calendar_sync.py  classifier_service.py  context_note_service.py  conversation_service.py  ingest_service.py  pdf_service.py  project_resolver.py  rag_service.py  record_writer.py  study_service.py  web_search_service.py
backend/tests/: conftest.py  test_health.py  test_migration_0004.py  test_providers_contract.py  test_routes_stubs.py
backend/tests/connectors/: test_connectors_calendar.py  test_connectors_gmail.py  test_sync_result_metrics.py
backend/tests/core/: __init__.py  test_metrics.py
backend/tests/middleware/: test_metrics_middleware.py
backend/tests/providers/: test_deepseek.py  test_deepseek_reason.py  test_qwen.py
backend/tests/routes/: test_briefing_route.py  test_chat_study_tools.py  (+5 more)
(+95 files in other folders)
