[project]
name = "aria-backend"
version = "0.1.0"
description = "ARIA personal assistant — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "supabase>=2.9",
  "httpx>=0.27",
  "openai>=1.54",
  "rapidfuzz>=3.10",
  "google-api-python-client>=2.140",
  "google-auth>=2.35",
  "google-auth-httplib2>=0.2",
  "google-auth-oauthlib>=1.2",
  "prometheus-client>=0.20",
  "pypdf>=4.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
